--- a/Android/app/src/main/res/menu/navigation_menu.xml
+++ b/Android/app/src/main/res/menu/navigation_menu.xml
@@ -5,11 +5,19 @@
 
     <item
         android:id="@+id/nav_account"
-        android:title="My Account" />
+        android:title="My Account"/>
 
     <item
         android:id="@+id/nav_settings"
         android:title="Settings" />
+
+    <item
+        android:id="@+id/nav_favourites"
+        android:title="Favourites" />
+
+    <item
+        android:id="@+id/nav_my_recipes"
+        android:title="My Recipes" />
 
     <item
         android:id="@+id/nav_logout"
