--- a/Android/app/src/main/res/layout/card_layout.xml
+++ b/Android/app/src/main/res/layout/card_layout.xml
@@ -40,8 +40,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/recipeTitle"
                     android:ellipsize="end"
-                    android:maxLines="7"
-                    android:text="@string/lorem_ipsum" />
+                    android:maxLines="7"/>
             </RelativeLayout>
 
         </LinearLayout>
