--- a/Android/app/src/main/res/menu/navigation_menu.xml
+++ b/Android/app/src/main/res/menu/navigation_menu.xml
@@ -21,6 +21,12 @@
 
     <item
         android:id="@+id/nav_logout"
-        android:title="Logout" />
+        android:title="Logout"
+        android:visible="false" />
+
+    <item
+        android:id="@+id/nav_login"
+        android:title="Login"
+        android:visible="true" />
 
 </menu>
