--- a/Android/app/src/main/res/menu/navigation_menu.xml
+++ b/Android/app/src/main/res/menu/navigation_menu.xml
@@ -4,8 +4,13 @@
     tools:ignore="HardcodedText">
 
     <item
+        android:id="@+id/nav_home"
+        android:title="Home"/>
+
+    <item
         android:id="@+id/nav_account"
         android:title="My Account"/>
+
 
     <item
         android:id="@+id/nav_settings"
