--- a/Android/app/src/main/res/layout/write_comment_layout.xml
+++ b/Android/app/src/main/res/layout/write_comment_layout.xml
@@ -11,14 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toStartOf="@+id/postComment"
+        android:layout_toStartOf="@+id/postCommentBtn"
         android:background="@color/white"
         android:hint="@string/tell_opinion"
         android:inputType="textMultiLine"
         android:padding="10dp" />
 
     <ImageView
-        android:id="@+id/postComment"
+        android:id="@+id/postCommentBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
