Add comment functionality vol 2

--- a/Android/app/src/main/res/layout/activity_recipe.xml
+++ b/Android/app/src/main/res/layout/activity_recipe.xml
@@ -63,8 +63,9 @@
             android:orientation="vertical" />
 
         <Button
-            android:id="@+id/commentButton"
+            android:id="@+id/addCommentButton"
             android:layout_width="match_parent"
+            android:visibility="gone"
             android:layout_height="wrap_content"
             android:onClick="onAddCommentClick"
             android:text="@string/add_comment" />
