--- a/Android/app/src/main/res/layout/card_layout.xml
+++ b/Android/app/src/main/res/layout/card_layout.xml
@@ -58,7 +58,7 @@
                 android:layout_alignParentStart="true"
                 />
             <ImageButton
-                android:id="@+id/likeButton"
+                android:id="@+id/likeEditButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
