--- a/Android/app/src/main/res/layout/filter_view.xml
+++ b/Android/app/src/main/res/layout/filter_view.xml
@@ -5,203 +5,210 @@
     android:id="@+id/filter_view"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Name"
-            android:layout_gravity="center"
-            android:textSize="20dp"/>
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/name_of_recipe"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Labels"
-            android:textSize="20dp"
-            android:layout_gravity="center"/>
+        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <LinearLayout
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <CheckBox
-                    android:id="@+id/label_1"
+                android:text="Name"
+                android:layout_gravity="center"
+                android:textSize="20dp"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/name_of_recipe"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Labels"
+                android:textSize="20dp"
+                android:layout_gravity="center"/>
+            <LinearLayout
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="breakfast"/>
-                <CheckBox
-                    android:id="@+id/label_2"
+                    android:orientation="vertical">
+                    <CheckBox
+                        android:id="@+id/label_1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="breakfast"/>
+                    <CheckBox
+                        android:id="@+id/label_2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="dinner"/>
+                    <CheckBox
+                        android:id="@+id/label_3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="breakfast"/>
+                    <CheckBox
+                        android:id="@+id/label_4"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="dinner"/>
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="dinner"/>
-                <CheckBox
-                    android:id="@+id/label_3"
+                    android:orientation="vertical">
+                    <CheckBox
+                        android:id="@+id/label_5"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="breakfast"/>
+                    <CheckBox
+                        android:id="@+id/label_6"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="dinner"/>
+                    <CheckBox
+                        android:id="@+id/label_7"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="breakfast"/>
+                    <CheckBox
+                        android:id="@+id/label_8"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="dinner"/>
+                </LinearLayout>
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="breakfast"/>
-                <CheckBox
-                    android:id="@+id/label_4"
+                    android:orientation="vertical">
+                    <CheckBox
+                        android:id="@+id/label_9"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="breakfast"/>
+                    <CheckBox
+                        android:id="@+id/label_10"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="dinner"/>
+                    <CheckBox
+                        android:id="@+id/label_11"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="breakfast"/>
+                    <CheckBox
+                        android:id="@+id/label_12"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="dinner"/>
+                </LinearLayout>
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="dinner"/>
+                    android:orientation="vertical">
+                    <CheckBox
+                        android:id="@+id/label_13"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="breakfast"/>
+                    <CheckBox
+                        android:id="@+id/label_14"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="dinner"/>
+                    <CheckBox
+                        android:id="@+id/label_15"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="breakfast"/>
+                    <CheckBox
+                        android:id="@+id/label_16"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="dinner"/>
+                </LinearLayout>
             </LinearLayout>
 
-            <LinearLayout
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#000000"
+                />
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <CheckBox
-                    android:id="@+id/label_5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="breakfast"/>
-                <CheckBox
-                    android:id="@+id/label_6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="dinner"/>
-                <CheckBox
-                    android:id="@+id/label_7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="breakfast"/>
-                <CheckBox
-                    android:id="@+id/label_8"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="dinner"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center"
+                android:text="Price"
+                android:textSize="20dp"/>
+
+
+            <org.florescu.android.rangeseekbar.RangeSeekBar
+                android:id="@+id/priceRangeSeekBar"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <CheckBox
-                    android:id="@+id/label_9"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="breakfast"/>
-                <CheckBox
-                    android:id="@+id/label_10"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="dinner"/>
-                <CheckBox
-                    android:id="@+id/label_11"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="breakfast"/>
-                <CheckBox
-                    android:id="@+id/label_12"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="dinner"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
+                android:thumb="@drawable/ic_seekbar"
+                app:showLabels="true"
+                app:textAboveThumbsColor="@color/black"
+                />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#000000"
+                />
+
+
+
+            <com.example.cookbook.ui.custom.MultiSelectionSpinner
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:id="@+id/ingredient_dropdown"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp"/>
+
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#000000"
+                />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
                 <CheckBox
-                    android:id="@+id/label_13"
+                    android:id="@+id/liked_recipes"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="breakfast"/>
+                    android:text="Liked Recipes"/>
+                <Space
+                    android:layout_width="30dp"
+                    android:layout_height="wrap_content" />
                 <CheckBox
-                    android:id="@+id/label_14"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="dinner"/>
-                <CheckBox
-                    android:id="@+id/label_15"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="breakfast"/>
-                <CheckBox
-                    android:id="@+id/label_16"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="dinner"/>
+                    android:id="@+id/my_recipes"
+                    android:text="My Recipes"/>
             </LinearLayout>
+            <Button
+                android:id="@+id/apply_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="APPLY"/>
         </LinearLayout>
+    </ScrollView>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#000000"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_gravity="center"
-            android:text="Price"
-            android:textSize="20dp"/>
-
-
-        <org.florescu.android.rangeseekbar.RangeSeekBar
-            android:id="@+id/priceRangeSeekBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:thumb="@drawable/ic_seekbar"
-            app:showLabels="true"
-            app:textAboveThumbsColor="@color/black"
-            />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#000000"
-            />
-
-
-
-        <com.example.cookbook.ui.custom.MultiSelectionSpinner
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/ingredient_dropdown"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="20dp"/>
-
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#000000"
-            />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <CheckBox
-                android:id="@+id/liked_recipes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Liked Recipes"/>
-            <Space
-                android:layout_width="30dp"
-                android:layout_height="wrap_content" />
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/my_recipes"
-                android:text="My Recipes"/>
-        </LinearLayout>
-        <Button
-            android:id="@+id/apply_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="APPLY"/>
-    </LinearLayout>
 
 
 
