--- a/Android/app/src/main/res/layout/activity_manage_recipe.xml
+++ b/Android/app/src/main/res/layout/activity_manage_recipe.xml
@@ -1,43 +1,69 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/recipeView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/recipeView"
     android:layout_marginVertical="10dp"
     tools:context=".recipe.ManageRecipeActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/recipeImage"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/image_container"
             android:layout_width="match_parent"
-            android:layout_height="400dp" />
+            android:layout_height="400dp">
+
+            <ImageView
+                android:id="@+id/recipeImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:padding="4dp"
+                android:translationZ="1dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <ImageView
+                    android:id="@+id/recipeImageEdit"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:background="@drawable/baseline_edit_24" />
+            </RelativeLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginTop="10dp"
+            android:orientation="horizontal"
             android:weightSum="2">
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="@string/name_colon"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_weight="1"
-                />
+                android:textStyle="bold" />
 
             <EditText
-                android:layout_width="0dp"
                 android:id="@+id/recipeName"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:inputType="text"
-                android:textSize="16sp"/>
+                android:textSize="16sp" />
         </LinearLayout>
 
         <TextView
@@ -51,10 +77,10 @@
         <LinearLayout
             android:id="@+id/ingredientList"
             android:layout_width="match_parent"
-            android:visibility="gone"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <include layout="@layout/ingredient_list_header" />
         </LinearLayout>
@@ -63,10 +89,10 @@
             android:id="@+id/addIngredientBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onAddIngredientClick"
             android:backgroundTint="#ccfbf1"
-            android:textColor="@color/teal_700"
-            android:text="@string/add" />
+            android:onClick="onAddIngredientClick"
+            android:text="@string/add"
+            android:textColor="@color/teal_700" />
 
         <TextView
             android:layout_width="match_parent"
@@ -77,14 +103,14 @@
             android:textStyle="bold" />
 
         <EditText
-            android:layout_width="match_parent"
-            android:inputType="textMultiLine"
-            android:layout_height="wrap_content"
             android:id="@+id/instructions"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="@drawable/border"
+            android:inputType="textMultiLine"
             android:padding="10dp"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/saveBtn"
